creating_openshift_apps/apache_dc.yml
apiVersion:  apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: apache-dc
  labels:
    app: demo1
spec:
  replicas: 2
  selector: 
    app: demo1
  template:
    metadata:
      labels:
        app: demo1
    spec:
      containers:
      - name: webserver
        image: lakshminp/apache:v1
        ports:
        - name: http
          containerPort: 8080
      restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - webserver
      from:
        kind: ImageStreamTag
        name: apache:latest
    type: ImageChange
