creating_openshift_apps/apache_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: apache
  labels:
    app: demo1
spec:
  containers:
    - name: webserver
      image: centos/httpd-24-centos7
      ports:
        - name: http
          containerPort: 8080
