creating_openshift_apps/apache_root_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: apache
  labels:
    app: demo1
spec:
  containers:
    - name: webserver
      image: httpd:2.4-alpine
      ports:
        - name: http
          containerPort: 8080
